# Robot_Tiago

./: CMakeLists.txt  README.md  package.xml  ro_fast.bag  ro_medium.bag  ro_slow.bag  rt_fast.bag  rt_medium.bag  rt_slow.bag
lab3/: lab3.odt
launch/: slam.launch  tiago_corridor.launch  tiago_empty.launch  tiago_full.launch  tiago_maze.launch  tiago_proi1.launch  tiago_proj2.launch  tiago_simple.launch  velmobil_navigation.launch
maps/: map_corridor.yaml  maze_map.yaml
param/: base_global.yaml  base_local.yaml  cost_map.yaml  global_map.yaml  local_map.yaml
rviz/: maps.rviz  proj2set.rviz  simple.rviz
src/: lab1.cpp  lab1_er.cpp  proj2.cpp
worlds/: corridor.world  lab_2.world  maze.world  stero_mobile.world  stero_mobile_ode.world
worlds/lab_2_world/: model.config  model.sdf
